# phidgets

./: CMakeLists.txt  LICENSE  README.md  nodelet_plugins.xml  package.xml
cfg/: Encoder.cfg  Logging.cfg  Motor.cfg  Phidgets.cfg  Spatial.cfg  Temperature.cfg
include/phidgets/: error.h  logging_nodelet.h  motor.h  motor_nodelet.h  motors.h  motors_nodelet.h  spatial.h  spatial_nodelet.h  util.h
launch/: motor.launch  motors.launch  phidgets.launch  spatial.launch  temperature.launch
msg/: DutyCycles.msg  Encoder.msg  EncodersT.msg  PWM.msg
phidgets/: CMakeLists.txt  package.xml
phidgets/cfg/: Motor.cfg  Spatial.cfg  Temperature.cfg
phidgets/include/phidgets/: encoder.h  encoders.h  encoders_nodelet.h  motor.h  motors.h  spatial.h  temperature.h  temperature_nodelet.h  util.h
phidgets/launch/: encoders.launch  logging.launch  spatial.launch
phidgets/src/: encoder.cpp  encoders.cpp  encoders_nodelet.cpp  error.cpp  motors.cpp  spatial.cpp  util.cpp
phidgets/urdf/: robot.urdf
phidgets_msgs/: CMakeLists.txt  README.md  package.xml
phidgets_msgs/msg/: DutyCycles.msg  Encoders.msg
src/: encoders.cpp  logging_nodelet.cpp  motor.cpp  motor_nodelet.cpp  motors.cpp  motors_nodelet.cpp  phidgets_node.cpp  spatial.cpp  spatial_nodelet.cpp  temperature.cpp  temperature_nodelet.cpp  util.cpp
