<?xml version="1.0"?>
<package format="2">
	<name>phidgets_msgs</name>
	<version>1.0.0</version>
	<description>The phidgets_msgs package</description>

	<maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

	<license>MIT</license>

	<url type="website">http://github.com/danielduberg/phidgets</url>

	<author email="dduberg@kth.se">Daniel Duberg</author>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
	<depend>std_msgs</depend>
</package>
